// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleWidget > renders correctly 1`] = `
<DocumentFragment>
  <div
    class="form-control"
  >
    <label
      class="cursor-pointer label my-auto justify-start"
    >
      <div
        class="mr-2"
      >
        <input
          checked=""
          class="toggle "
          id="test-id"
          name="test-id"
          required=""
          type="checkbox"
        />
      </div>
      <span
        class="label-text"
      >
        Sample Field Label
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`ToggleWidget > renders disabled state correctly 1`] = `
<DocumentFragment>
  <div
    class="form-control"
  >
    <label
      class="cursor-pointer label my-auto justify-start"
    >
      <div
        class="mr-2"
      >
        <input
          checked=""
          class="toggle "
          disabled=""
          id="test-id"
          name="test-id"
          required=""
          type="checkbox"
        />
      </div>
      <span
        class="label-text"
      >
        Sample Field Label
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`ToggleWidget > renders with custom label 1`] = `
<DocumentFragment>
  <div
    class="form-control"
  >
    <label
      class="cursor-pointer label my-auto justify-start"
    >
      <div
        class="mr-2"
      >
        <input
          checked=""
          class="toggle "
          id="test-id"
          name="test-id"
          required=""
          type="checkbox"
        />
      </div>
      <span
        class="label-text"
      >
        Custom Toggle Label
      </span>
    </label>
  </div>
</DocumentFragment>
`;
